<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeviceDialogFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtDeviceAlias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="Device Alias" />

        <TextView
            android:id="@+id/txtConnectionStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/not_connected"/>

        <Button
            android:id="@+id/btnConnectDevice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connect_device"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text=" "/>

        <Button
            android:id="@+id/btnViewLogs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_logs"/>

        <TextView
            android:id="@+id/txtAlarmStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/no_alarm_set"/>

        <Button
            android:id="@+id/btnSetAlarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_alarm"/>

        <TextView
            android:id="@+id/txtContactStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/no_contact_set"/>

        <Button
            android:id="@+id/btnSetContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_contact"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:text="@string/device_name"/>

        <Button
            android:id="@+id/btnChangeDeviceName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_device_name"/>



    </LinearLayout>
</FrameLayout>